<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/achievements"
        android:icon="@drawable/ic_success"
        android:title="@string/achievements"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/dark_theme"
        android:title="@string/dark_theme"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_by"
        android:title="@string/sort_by"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/sort_name"
                android:title="@string/name" />

            <item
                android:id="@+id/sort_sanskrit"
                android:title="@string/sanskrit" />

            <item
                android:id="@+id/sort_difficulty"
                android:title="@string/difficulty" />

            <item
                android:id="@+id/sort_done"
                android:title="@string/done" />

            <item
                android:id="@+id/sort_undone"
                android:title="@string/undone" />

            <item
                android:id="@+id/sort_type"
                android:title="@string/type" />

        </menu>

    </item>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>