<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <TextView
       android:paddingVertical="10dp"
       android:layout_width="match_parent"
       android:background="@color/light_gray"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:id="@+id/txtSanskritName"
       android:textSize="30sp"
       tools:text="@string/sample_sanskrit"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    <LinearLayout
        android:id="@+id/detailsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:background="@color/dark_gray"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:paddingVertical="10dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtAsanaType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    tools:text="@string/sample_type" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtDfficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/difficulty_level" />


                <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                    android:layout_width="60dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    app:rcAnimationSpeedScale="3"
                    app:rcBackgroundColor="@color/white"
                    android:id="@+id/pbDifficultyLevel"
                    app:rcProgressColor="#EF5350" />
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/imgDone"
                android:layout_marginHorizontal="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_done" />


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imgAsana"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/gray" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:scrollbars="vertical"
                android:text="@string/lorem_ipsum"
                android:textSize="20sp" />

        </RelativeLayout>



    </LinearLayout>


    </RelativeLayout>
    <TextView
        android:background="@color/light_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/txtName"
        android:textSize="30sp"
        android:text="@string/sample_name"
        android:paddingVertical="10dp"/>


</LinearLayout>